--- a/app/src/main/res/layout/activity_multiparty.xml
+++ b/app/src/main/res/layout/activity_multiparty.xml
@@ -9,171 +9,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="demo.tokbox.com.multiparty">
-
-
-    <TableLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_above="@+id/view_publisher">
+        <LinearLayout
+            android:id="@+id/view_subscriber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/view_publisher"
+        android:layout_width="match_parent"
+        android:layout_height="240px"
         android:layout_above="@+id/separator"
-        android:id="@+id/tableLayout">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorSeparator" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_line1">
-                <ProgressBar
-                    android:id="@+id/line1_spinner"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:indeterminate="false"
-                    android:visibility="gone"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:text="Line 1" />
-            </RelativeLayout>
-        </TableRow>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorSeparator" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_line2">
-                <ProgressBar
-                    android:id="@+id/line2_spinner"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:indeterminate="false"
-                    android:visibility="gone"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:text="Line 2" />
-            </RelativeLayout>
-        </TableRow>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorSeparator" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_line3" >
-                <ProgressBar
-                    android:id="@+id/line3_spinner"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:indeterminate="false"
-                    android:visibility="gone"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:text="Line 3" />
-            </RelativeLayout>
-        </TableRow>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorSeparator" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_line4" >
-                <ProgressBar
-                    android:id="@+id/line4_spinner"
-                    style="?android:attr/progressBarStyleLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:indeterminate="false"
-                    android:visibility="gone"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:text="Line 4" />
-            </RelativeLayout>
-        </TableRow>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorSeparator" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_publisher" >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:text="Your Camera View" />
-            </RelativeLayout>
-        </TableRow>
-
-    </TableLayout>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </FrameLayout>
 
     <View
         android:layout_width="match_parent"
@@ -181,6 +37,7 @@
         android:layout_above="@+id/btn_endcall"
         android:id="@+id/separator"
         android:background="@color/colorSeparator" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -188,5 +45,6 @@
         android:id="@+id/btn_endcall"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true" />
+
 
 </RelativeLayout>
