--- a/app/src/main/res/layout/activity_multiparty.xml
+++ b/app/src/main/res/layout/activity_multiparty.xml
@@ -9,42 +9,77 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="demo.tokbox.com.multiparty">
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/view_publisher">
-        <LinearLayout
-            android:id="@+id/view_subscriber"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/control_container"
+        android:orientation="vertical">
+        <FrameLayout
+            android:id="@+id/view_publisher"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="@drawable/frame">
+        </FrameLayout>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/frame"
+            android:layout_weight="0.5"
+            android:layout_marginTop="3dp"
+            android:fadingEdgeLength="20dp" >
+            <LinearLayout
+                android:id="@+id/view_subscriber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/view_publisher"
-        android:layout_width="match_parent"
-        android:layout_height="600px"
-        android:layout_above="@+id/separator"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </FrameLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@+id/btn_endcall"
-        android:id="@+id/separator"
-        android:background="@color/colorSeparator" />
-
-    <Button
+    <LinearLayout
+        android:id="@+id/control_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="End Call"
-        android:id="@+id/btn_endcall"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal"
+        android:background="@drawable/transparentframe"
+        android:gravity="center" >
+        <ImageButton
+            android:id="@+id/btn_endcall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style1"
+            android:src="@mipmap/hangup"
+            android:padding="10dp"
+            android:onClick="onClick"
+            android:layout_margin="5dp"
+            android:text="End Call" />
+        <ImageButton
+            android:id="@+id/btn_mute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style1"
+            android:src="@mipmap/unmute_pub"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:onClick="onClick"
+            android:text="Mute" />
+        <ImageButton
+            android:id="@+id/btn_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style1"
+            android:src="@mipmap/camera"
+            android:onClick="onClick"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:text="Change Camera" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
